--- a/Assets/index.html
+++ b/Assets/index.html
@@ -11,7 +11,10 @@
 </head>
 <body>
     <div class="container">
-        <h1>Here are all the Gifs you need</h1>
+        <div id="headerbox">
+
+            <h1>Welcome to the sports GIF creater</h1>
+        </div>
         <div id="gif-buttons"></div>
         <form id="search-form">
             <label for="search-input">Search More GIFS</label><br>
@@ -23,4 +26,4 @@
         <div id="gif-display"></div>        
     </div>
 </body>
-</html>
+</html> 
