--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>GIPHY Sports Search</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="./CSS/main.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="./Assets/CSS/main.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="./JS/main.js"></script>
+    <script src="./Assets/JS/main.js"></script>
 </head>
 <body>
     <div class="container">
